--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="aircrack.html">Wifi Password Cracking (CPU) with Aircrack-ng</a></li>
 				<li><a href="#">Wifi Password Cracking (GPU) with Pyrit</a></li> <!-- pyrit.html -->
 				<li><a href="#">Getting remote access to a computer using Metasploit</a></li> <!-- remote.html -->
+				<li><a href="#">Post-exploitation with Metasploit</a></li>
 			</ul>
 		</div>
 	</body>
