--- a/source_html/index.html
+++ b/source_html/index.html
@@ -4,25 +4,291 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <script type="module" src="JSCompiler/JSCompiler.mjs"></script>
-        <script type="module" src="JSCompiler/JSCompiler.mjs"></script>
-        <script src="https://unpkg.com/esprima@~4.0/dist/esprima.js"></script>
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
+        <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
+        <title>Regex Debugger</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <script type="text/javascript">
-            function f() {
-                const input_expression = document.getElementById("text_input").value;
-                const esprima_program = esprima.parse(input_expression);
-                document.getElementById("output").innerHTML = JSON.stringify(esprima_program, null, 2);
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <a class="navbar-brand brand">Reg<span class="brand-color">ex</span> Debugger</a>
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span><i class="fas fa-bars"></i></span>
+            </button>
 
-                //document.getElementById("output").innerHTML = esprima_program;
-                //TODO browserify and call compileJS(esprima_program);
-            }
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <div class="container">
+                <div id="section1">
+                    <div class="regularExpression">
+                        <label for="text_input">Regular Expression</label>
+                        <div name="text_input" id="text_input" class="fixedHeight"></div>
+                        <div id="message" class="icon">Not Compiled</div>
+                        <div class="buttonGroup execButtons">
+                            <button class="debugNavigation debugDoubleLeft exec" id="ExecLeft" onclick="updateExec('left', this)" disabled>
+                                Previous
+                                <p class="debugNavigationSecondLine">Regular Expression</p>
+                            </button>
+                            <button class="debugNavigation debugDoubleRight exec" id="ExecRight" onclick="updateExec('right', this)" disabled>
+                                Next
+                                <p class="debugNavigationSecondLine">Regular Expression</p>
+                            </button>
+                        </div>
+                        <button class="buttons" onclick="compile()">Compile</button>
+                    </div>
+                    <div id="tabs">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link active"
+                                    id="compiledJS-tab"
+                                    data-toggle="tab"
+                                    href="#compiledJS"
+                                    role="tab"
+                                    aria-controls="compiledJS"
+                                    aria-selected="true"
+                                    >Compiled JS</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link"
+                                    id="output-tab"
+                                    data-toggle="tab"
+                                    href="#output"
+                                    role="tab"
+                                    aria-controls="output"
+                                    aria-selected="false"
+                                    >Output</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link"
+                                    id="debug-tab"
+                                    data-toggle="tab"
+                                    href="#debug"
+                                    role="tab"
+                                    aria-controls="debug"
+                                    aria-selected="false"
+                                    >Code-Step</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tree-tab" data-toggle="tab" href="#tree" role="tab" aria-controls="tree" aria-selected="false"
+                                    >Tree-Step</a
+                                >
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane fade show active" id="compiledJS" role="tabpanel" aria-labelledby="compiledJS-tab">
+                                <pre class="tab_window" id="compilation"></pre>
+                            </div>
+                            <div class="tab-pane fade" id="output" role="tabpanel" aria-labelledby="output-tab">
+                                <pre class="tab_window">
+                                    <div  id="runtime">
+                                        <div id="runtime-div"><span class="runtime-title">Match: </span><span id="runtime-match"></span></div>
+                                        <div id="runtime-div"><span class="runtime-title">Groups: </span><div id="runtime-groups"></div></div>
+                                    </div>
+                                </pre>
+                            </div>
+                            <div class="tab-pane fade" id="debug" role="tabpanel" aria-labelledby="debug-tab">
+                                <pre class="tab_window" id="debugWindow"></pre>
+                                <div class="buttonGroup firstLast">
+                                    <button class="debugNavigation debugDoubleLeft" id="FirstState" onclick="changeState('first')" disabled>
+                                        First State
+                                    </button>
+                                    <button class="debugNavigation debugDoubleRight" id="LastState" onclick="changeState('last')" disabled>
+                                        Last State
+                                    </button>
+                                </div>
+                                <div class="buttonGroup">
+                                    <button class="debugNavigation debugDoubleLeft" id="BPLeft" onclick="updateDebugger('left', true, this)" disabled>
+                                        Previous
+                                        <p class="debugNavigationSecondLine">Break Point</p>
+                                    </button>
+                                    <button class="debugNavigation debugLeft" id="StepLeft" onclick="updateDebugger('left', false, this)" disabled>
+                                        Previous
+                                        <p class="debugNavigationSecondLine">Step</p>
+                                    </button>
+                                    <button class="debugNavigation debugRight" id="StepRight" onclick="updateDebugger('right',false, this)" disabled>
+                                        Next
+                                        <p class="debugNavigationSecondLine">Step</p>
+                                    </button>
+                                    <button
+                                        class="debugNavigation debugDoubleRight"
+                                        id="BPRight"
+                                        onclick="updateDebugger('right', true, this)"
+                                        disabled
+                                    >
+                                        Next
+                                        <p class="debugNavigationSecondLine">Break Point</p>
+                                    </button>
+                                </div>
+                                <div class="buttonGroup">
+                                    <button
+                                        class="debugNavigation debugDoubleLeft iteration"
+                                        id="IterationLeft"
+                                        onclick="updateIteration('left', this)"
+                                        disabled
+                                    >
+                                        Previous
+                                        <p class="debugNavigationSecondLine">Iteration</p>
+                                    </button>
+                                    <div id="iterationCount">
+                                        <p class="iterationSecondLine">Iteration</p>
+                                        <p>x/y</p>
+                                    </div>
+                                    <button
+                                        class="debugNavigation debugDoubleRight iteration"
+                                        id="IterationRight"
+                                        onclick="updateIteration('right', this)"
+                                        disabled
+                                    >
+                                        Next
+                                        <p class="debugNavigationSecondLine">Iteration</p>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="tree" role="tabpanel" aria-labelledby="tree-tab">
+                                <pre class="tab_window" id="treeWindow"></pre>
+                            </div>
+                        </div>
+                        <button class="buttons" id="toggleExpansion">Expand Tree</button>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <div class="container help">
+            <h6>Help</h6>
+            <div id="help-tags">
+                <div>
+                    <span class="icon icon_help" id="start_help"></span>
+                    <span>Start of match</span>
+                </div>
+                <div>
+                    <span class="icon icon_help" id="end_help"></span>
+                    <span>End of match</span>
+                </div>
+                <div>
+                    <span class="icon icon_help" id="match_help">h</span>
+                    <span>Matched sub-expression</span>
+                </div>
+                <div>
+                    <span class="icon icon_help" id="match_inner_help">[<span>h</span>elp]</span>
+                    <span>Sub-expression currently being matched inside a Character Range.</span>
+                </div>
+                <div>
+                    <span class="icon icon_help" id="failed_match_help">h</span>
+                    <span>Failed sub-expression match. The compiler will backtrack to a previous state after this.</span>
+                </div>
+                <div>
+                    <span class="icon icon_help" id="failed_help">Failed</span>
+                    <span>Current iteration failed matching and has no other paths.</span>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            &copy;
+            <span id="copyright"></span>
+            Reg<span class="brand-color">ex </span>
+            Debugger
+        </footer>
+        <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://unpkg.com/esprima@4.0.1/dist/esprima.js"></script>
+        <script src="./browserify_dist/compile.js"></script>
+        <script src="./browserify_dist/run.js"></script>
+        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="./main.js"></script>
+        <script>
+            require.config({ paths: { vs: "../node_modules/monaco-editor/min/vs" } });
+            var editor;
+
+            require(["vs/editor/editor.main"], function () {
+                monaco.editor.defineTheme("myTheme", {
+                    base: "vs",
+                    inherit: true,
+                    rules: [{ background: "f4f4f4" }],
+                    colors: {
+                        "editor.background": "#f4f4f4",
+                        "editorCursor.foreground": "#073f51",
+                        "editor.lineHighlightBackground": "#47bdda30",
+                        "editorLineNumber.foreground": "#47bdda",
+                        "editor.selectionBackground": "#1487af70",
+                        "editor.inactiveSelectionBackground": "#1487af70",
+                    },
+                });
+
+                monaco.editor.setTheme("myTheme");
+
+                //value: "/* Insert regular expression here */ \nvar a = /(a*)\\1b/; \na.exec('aaab')",
+                ///* Insert regular expression here */ \nvar a = /(a*)\\1[!]b/; \na.exec('aaab')
+                /*
+                const expr1 = "var a = /bb[a-zA-Z]+/; \na.exec('bbaZ') \n\n";
+                const expr2 = "var b = /abc/; \nb.exec('abc')\n\n";
+                const expr3 = "var b = /a[bc\\.\\+]+/; \nb.exec('ab.+')\n\n";
+                const expr4 = "var b = /(a*)\\1b/; \nb.exec('aaab')";
+                */
+                var b = /([^\.@]*(\.[^\.@])*)@/;
+b.exec("ab@")
+                 const expp =
+                     'var b = /(([^<>\\(\\)\\[\\]\\.,;:\\s@\\"]*(\\.[^<>\\(\\)\\[\\]\\.,;:\\s@\\"])*)|(\\".+\\"))@(([[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z-0-9]+\\.)+[a-zA-Z]{2,}))/;\nb.exec("luis.ab@hotmail.com")';
+                // const expp = "var b = /([^\\.@]*(\\.[^\\.@])*)@/ \nb.exec('ab@')\n\n";
+                editor = monaco.editor.create(document.getElementById("text_input"), {
+                    value: expp,
+                    language: "javascript",
+                    lineNumbers: "on",
+                    vertical: "auto",
+                    horizontal: "auto",
+                    verticalScrollbarSize: 10,
+                    horizontalScrollbarSize: 10,
+                    automaticLayout: true,
+                    renderLineHighlight: "none",
+                    readOnly: false,
+                    minimap: {
+                        enabled: false,
+                    },
+                    fontSize: 14,
+                    lineHeight: 19,
+                });
+            });
         </script>
-        <input type="text" name="" id="text_input" />
-        <button type="submit" onclick="f()">Submit</button>
-
-        <pre id="output"></pre>
     </body>
 </html>
