--- a/source_html/index.html
+++ b/source_html/index.html
@@ -21,8 +21,8 @@
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="https://luiscalmeida.github.io/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://luiscalmeida.github.io/source_html/style.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark">
