--- a/source_html/index.html
+++ b/source_html/index.html
@@ -229,14 +229,14 @@
             Debugger
         </footer>
         <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
-        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://luiscalmeida.github.io/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="https://luiscalmeida.github.io/node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="https://luiscalmeida.github.io/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="https://unpkg.com/esprima@4.0.1/dist/esprima.js"></script>
-        <script src="./browserify_dist/compile.js"></script>
-        <script src="./browserify_dist/run.js"></script>
-        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
-        <script src="./main.js"></script>
+        <script src="https://luiscalmeida.github.io/source_html/browserify_dist/compile.js"></script>
+        <script src="https://luiscalmeida.github.io/source_html/browserify_dist/run.js"></script>
+        <script src="https://luiscalmeida.github.io/node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="https://luiscalmeida.github.io/source_html/main.js"></script>
         <script>
             require.config({ paths: { vs: "../node_modules/monaco-editor/min/vs" } });
             var editor;
