--- a/source_html/index.html
+++ b/source_html/index.html
@@ -228,7 +228,7 @@
             Reg<span class="brand-color">ex </span>
             Debugger
         </footer>
-        <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+        <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
         <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
