--- a/source_html/index.html
+++ b/source_html/index.html
@@ -41,12 +41,40 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Expressions
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" data-mult="1" data-value="123aaa123" data-comment="User thinks the expression matches strings that start with at least one digit, and end with at least one digit." href="#">/^[0-9]+$/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="[fugazi]" data-comment="User thinks this string should not match because it should not match the brackets." href="#">/^[A-z0-9]+$/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="g()()GI3" data-comment="User thinks this string should not match." href="#">/^[gG][o0O()\[\]{}][o0O()\[\]{}][gG][lLI][eE3]/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="%AB" data-comment="User thinks this string should not match." href="#">/^%?\S{3}/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="1€abcdefG" data-comment="User thinks this string should not match." href="#">/^(?=.*?[A-Z])(?=.*?[a-z])(?=(.*?[0-9])|(.*?[@#&~])).{8,20}$/</a>
+                          <a class="dropdown-item" data-mult="1" data-value=":isakmpkeymanager ()" data-comment="User thinks this string should not match." href="#">/:.+ \(.[^)]*$/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="Good morning. Good afternoon. Good day." data-comment="User thinks this string should not match." href="#">/Good .+\./</a>
+                          <a class="dropdown-item" data-mult="1" data-value='{key: value, name: "John", age: 17}' data-comment="User thinks it should capture [key, value, name, age] but [value] is not captured." href="#">/(?:\s*(\w+)\s*:)|(?:\:\s*(\w+)\s*\,)/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="hello123" data-comment="User thinks this string should not match." href="#">/^[a-zA-Z]/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="99ll_#$%" data-comment="Should match whole strings comprised only of numbers, letters and underscores." href="#">/^([a-zA-Z0-9_])+/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="https://www,google.com" data-comment="User thinks this string should not match because of the comma on the URL" href="#">/(https|http)?:\/\/(?:\w[\-\w.]+)(?:\/[\-\w+&@#\/%=~_|!:,.;]*)?(?:\?[\-A-Z0-9+&@#\/%=~_|!:,.;]*)?/i</a>
+                          <a class="dropdown-item" data-mult="2" data-multi_line="true" data-value='["12345","12345ABC"]' data-comment="User thinks the first execution should match as a whole and the second should not." href="#">/\d+/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="s8bgBQYPmUaNjkToXCJLAwAA" data-comment="User thinks the expression would match if the string contains one digit." href="#">/[0-9]/</a>
+                          <a class="dropdown-item" data-mult="1" data-value="Price: 123 dollar." data-comment="User needs the capture groups to capture [123 dollar, 123, dollar]." href="#">/((\d+\.?\d+?)|(\d{1,3}(\,\d{3})+)) *([a-zA-Z]+)/</a>
+                          <a class="dropdown-item" data-mult="1" data-value='say("hello World");say("hello World 1");' data-comment="User wants to capture function call names and arguments, but when there are two function call in the same line it does not work as expected." href="#">/\b(.*)\n*\s*\((\n*\s*.*\n*\s*)\)\n*\s*;/</a>
+
+                          <!-- below : 2 execs... -->
+                          <a class="dropdown-item" data-mult="2" data-value='["1","1"]' data-comment="User does not understand why the results of the two executions alternate (first one matches and the other does not)" href="#">/\d/g</a>
+                          <a class="dropdown-item" data-mult="2" data-value='["Foo Bar","Foo Bar"]' data-comment="User does not understand why the results of the two executions alternate (first one matches and the other does not)" href="#">/Foo B/</a>
+
+                          <a class="dropdown-item" data-mult="1" data-value="4444" data-comment="User thinks the expression should only match a maximum of 3 digits" href="#">/^-?([0-9]{0,3}$|[0-9]{0,2}\.?[0-9]{0,1}$)/</a>
+                          
+                          <!-- below : Matches with many lines... -->
+                          <a class="dropdown-item" data-mult="1" data-multi_line="true" data-value="Label0: mov     variable0,WREG             ;Some comment
+    mov     W0,variable1
+Label1: btsc    variable2,#1               ;Some other comment
+    bra     label2" data-comment="User expects to match 'Label1: btsc    variable2', but the match also contains the line above: 'mov     W0,variable1'" href="#">/^[^;]*?variable2/</a>
+                        </div>
+                      </li>
                 </ul>
             </div>
         </nav>
@@ -228,7 +256,7 @@
             Reg<span class="brand-color">ex </span>
             Debugger
         </footer>
-        <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+        <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
         <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
