--- a/source_html/index.html
+++ b/source_html/index.html
@@ -22,7 +22,7 @@
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href=" https://luiscalmeida.github.io/node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
@@ -257,7 +257,7 @@ Label1: btsc    variable2,#1               ;Some other comment
             Reg<span class="brand-color">ex </span>
             Debugger
         </footer>
-        <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+        <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
         <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
