--- a/source_html/index.html
+++ b/source_html/index.html
@@ -264,7 +264,7 @@ Label1: btsc    variable2,#1               ;Some other comment
         <script src="https://unpkg.com/esprima@4.0.1/dist/esprima.js"></script>
         <script src="./browserify_dist/compile.js"></script>
         <script src="./browserify_dist/run.js"></script>
-        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="./monaco-editor/min/vs/loader.js"></script>
         <script src="./main.js"></script>
         <script>
             require.config({ paths: { vs: "../node_modules/monaco-editor/min/vs" } });
